vpc.tf
resource "aws_vpc" "myfirst_vpc" {
  cidr_block           = "${var.vpc_cidr}"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"

  tags = {
    Name     = "myfirst_vpc"
    Location = "Bangalore"
  }
}
